@@ -4,6 +4,7 @@ qtimageformats-opensource-src (5.5.0-1) UNRELEASED; urgency=medium
   * New upstream release.
   * Update debian/copyright.
   * Bump qtbase5-private-dev build-dependency to 5.5.0.
+  * Run the tests, but ignore the tests results for now.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 26 Aug 2015 17:41:43 +0300
 
